--- a/src/app/components/buy-ticket-poi-card/buy-ticket-poi-card.component.html
+++ b/src/app/components/buy-ticket-poi-card/buy-ticket-poi-card.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="relative w-60 h-40 cursor-pointer">
     <div class="text-white z-10 relative mt-14 ml-2 h-full">
         <p class="text-sm text-shadow-sm shadow-black font-['Urbanist'] font-bold">
@@ -9,9 +10,13 @@
         <p class="text-xs text-shadow-sm shadow-black font-['Urbanist'] font-bold">
             {{ ticket?.price }}€
         </p>
+        <p class="text-xs text-shadow-sm shadow-black font-['Urbanist'] font-bold">
+            Quantité actuelle: {{ ticket?.quantity }}
+        </p>
     </div>
     <div
         class="absolute flex justify-center items-center cursor-pointer rounded-full w-6 h-6 bg-[var(--primary)]"
+        (click)="addTicketToBasket()"
     >
         <p-inputIcon class="text-lg" [styleClass]="'pi pi-shopping-cart'" />
     </div>
