--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -2,16 +2,16 @@
 <p-table [value]="cartItems" responsiveLayout="scroll">
     <ng-template pTemplate="header">
         <tr>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Quantity</th>
+            <th>Nom</th>
+            <th>Prix</th>
+            <th>Quantité</th>
             <th>Total</th>
-            <th>Actions</th>
+            <th>Action</th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-item>
         <tr>
-            <td>{{ item.name }}</td>
+            <td class="font-bold text-xl">Ticket "{{ item.title }}"</td>
             <td>{{ item.price }}€</td>
             <td>
                 <p-inputNumber
@@ -36,7 +36,9 @@
         <tr>
             <td colspan="3" style="text-align: right">Total:</td>
             <td>{{ getTotal() }}€</td>
-            <td><button pButton label="Payer" (click)="pay()"></button></td>
+            <td>
+                <button *ngIf="cartItems.length > 0" pButton label="Payer" (click)="pay()"></button>
+            </td>
         </tr>
     </ng-template>
 </p-table>
