--- a/src/app/pages/basket-page/basket-page.component.html
+++ b/src/app/pages/basket-page/basket-page.component.html
@@ -1,3 +1,4 @@
-<div>
+<div class="mt-28">
+    <h3 class="text-2xl font-semibold text-center mb-20">Mon Panier</h3>
     <app-basket class="mt-28"></app-basket>
 </div>
