Feature/buy ticket poi (#43)
* add loader on img

* add loader on img currently at card

* add button scroll poi page

* init shop page and card tickets + model ticket init

* create and modifiate ticket okay

* add stripe conf

* add card buy ticket and basket init

* payment and basket ok

* lint + test ok

* fix UI + add model

* my tickets okay

--- a/src/app/components/currently-at-card/currently-at-card.component.html
+++ b/src/app/components/currently-at-card/currently-at-card.component.html
@@ -16,5 +16,9 @@
         alt="avatar"
         class="object-cover rounded-xl z-0"
         fill
+        [loading]="'auto'"
+        (load)="isLoadingImage = false"
+        (error)="isLoadingImage = false"
     />
+    <div class="spinner" *ngIf="isLoadingImage">Loading...</div>
 </div>
