--- a/src/app/pages/poi-page/poi-page.component.css
+++ b/src/app/pages/poi-page/poi-page.component.css
@@ -9,3 +9,11 @@
   line-height: normal;
   color: rgba(255,255, 255, 0.20);
 }
+
+.scroll-container {
+  scroll-behavior: smooth; /* Défilement fluide */
+}
+
+.scroll-button {
+  cursor: pointer;
+}
