--- a/src/app/components/city-card/city-card.component.html
+++ b/src/app/components/city-card/city-card.component.html
@@ -12,9 +12,13 @@
                             'https://decizia.com/blog/wp-content/uploads/2017/06/default-placeholder.png'
                     }}"
                     alt="{{ cityModel.name }}"
+                    [loading]="'auto'"
+                    (load)="loadingImage = false"
+                    (error)="loadingImage = false"
                     class="absolute object-cover rounded-md"
                     fill
                 />
+                <div class="spinner" *ngIf="loadingImage">Loading...</div>
             </div>
         </ng-template>
         <div class="flex flex-col gap-3">
