--- a/src/app/components/buy-ticket-poi-card/buy-ticket-poi-card.component.html
+++ b/src/app/components/buy-ticket-poi-card/buy-ticket-poi-card.component.html
@@ -1,24 +1,24 @@
 <p-toast></p-toast>
 <div class="relative w-60 h-40 cursor-pointer">
     <div class="text-white z-10 relative mt-14 ml-2 h-full">
-        <p class="text-sm text-shadow-sm shadow-black font-['Urbanist'] font-bold">
+        <p class="text-sm shadow-black font-['Urbanist'] font-bold text-[var(--primary)]">
             {{ ticket?.title }}
         </p>
-        <p class="text-xs text-shadow-sm shadow-black font-['Urbanist']">
+        <p class="text-xs shadow-black font-['Urbanist'] text-[var(--primary)] mb-4">
             {{ ticket?.description?.slice(0, 70) }}...
         </p>
-        <p class="text-xs text-shadow-sm shadow-black font-['Urbanist'] font-bold">
-            {{ ticket?.price }}€
+        <p class="text-sm shadow-black font-['Urbanist'] font-bold text-[var(--primary)] mb-3">
+            Prix: {{ ticket?.price }}€
         </p>
-        <p class="text-xs text-shadow-sm shadow-black font-['Urbanist'] font-bold">
-            Quantité actuelle: {{ ticket?.quantity }}
+        <p class="text-sm shadow-black font-['Urbanist'] font-bold text-[var(--primary)]">
+            {{ ticket?.quantity }} billets restants
         </p>
     </div>
     <div
-        class="absolute flex justify-center items-center cursor-pointer rounded-full w-6 h-6 bg-[var(--primary)]"
+        class="absolute flex justify-center items-center cursor-pointer z-20 top-1/3 left-1/2"
         (click)="addTicketToBasket()"
     >
-        <p-inputIcon class="text-lg" [styleClass]="'pi pi-shopping-cart'" />
+        <button pButton class="w-full h-2/6" label="Acheter un billet"></button>
     </div>
     <img
         [ngSrc]="
@@ -26,7 +26,7 @@
             'https://www.timographie360.fr/photos/realisations/principal/vignettes/visite-virtuelle-arc-triomphe_80.jpg'
         "
         alt="avatar"
-        class="object-cover rounded-xl z-0"
+        class="object-cover rounded-xl z-0 opacity-30"
         fill
         [loading]="'auto'"
         (load)="isLoadingImage = false"
