--- a/src/app/components/create-ticket/create-ticket.component.html
+++ b/src/app/components/create-ticket/create-ticket.component.html
@@ -1,5 +1,6 @@
 <div class="review-container">
     <div class="title-input">
+        <h3>Titre du ticket</h3>
         <input
             pInputText
             type="text"
@@ -22,7 +23,7 @@
         <h3>Nombre de personne pour le ticket</h3>
         <p-dropdown
             [options]="nbrPeopleOptions"
-            [(ngModel)]="ticketRequest.nbrPeople"
+            [(ngModel)]="ticketRequest.groupSize"
             [filter]="true"
             filterBy="label"
             [showClear]="true"
@@ -30,8 +31,8 @@
             [virtualScrollItemSize]="38"
             optionLabel="label"
             [placeholder]="
-                ticketRequest.nbrPeople
-                    ? ticketRequest.nbrPeople.toString()
+                ticketRequest.groupSize
+                    ? ticketRequest.groupSize.toString()
                     : 'Séléctionne le nombre de personne'
             "
         />
@@ -52,9 +53,18 @@
             "
         />
     </div>
+    <div class="experience">
+        <h3>Prix</h3>
+        <input
+            pInputText
+            type="number"
+            [(ngModel)]="ticketRequest.price"
+            placeholder="Entrez un prix"
+        />
+    </div>
     <button
         pButton
-        (click)="createTicket()"
+        (click)="update ? updateTicket() : createTicket()"
         type="button"
         label="Valider"
         class="p-button-rounded p-button-raised p-button-primary"
