--- a/src/app/pages/quizz-page/quizz-page.component.html
+++ b/src/app/pages/quizz-page/quizz-page.component.html
@@ -9,7 +9,7 @@
         <h4 class="text-2xl font-bold mt-5">Règles :</h4>
         <ol class="list-decimal ml-5 text-lg">
             <li>Une question correcte vous donne 10 points</li>
-            <li>Une question incorrecte vous retire 10 points</li>
+            <li>Une question incorrecte vous retire 5 points</li>
             <li>Vous aurez 10 secondes pour répondre à chaque question</li>
             <li>Rafraîchir la page réinitialisera la question</li>
         </ol>
@@ -18,8 +18,9 @@
         <div class="flex justify-center">
             <div class="flex flex-row flex-wrap justify-center sm:w-full md:w-11/12 lg:w-1/2">
                 <input
-                    placeholder="Entrez votre nom"
-                    #name
+                    [placeholder]="name"
+                    pInputText
+                    [disabled]="name"
                     class="text-black placeholder-gray-600 w-full px-4 py-2.5 mt-2 text-base transition duration-500 ease-in-out transform border-transparent rounded-lg bg-gray-200 focus:border-blueGray-500 focus:bg-white dark:focus:bg-gray-100 focus:outline-none focus:shadow-lg focus:ring-0 ring-offset-current ring-offset-1 ring-gray-400"
                 />
                 <button
