--- a/src/app/components/question/question.component.css
+++ b/src/app/components/question/question.component.css
@@ -2,7 +2,7 @@
 .card {
   width: 90%;
   height: fit-content;
-  margin: 10rem auto auto;
+  margin: auto;
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -23,11 +23,14 @@
 .user {
   display: flex;
   align-items: center;
+  gap: 5px;
 }
 
 .avatar {
-  width: 32px;
-  height: 32px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
   border-radius: 50%;
   margin-right: 8px;
 }
@@ -41,6 +44,9 @@
 }
 
 .question-image {
+  width: 100%;
+  object-fit: cover;
+  position: absolute;
   border-radius: 8px;
   margin-bottom: 16px;
 }
@@ -63,4 +69,19 @@
 .correct {
   background-color: #28a745 !important;
   color: white !important;
+}
+
+.incorrect {
+  background-color: red !important;
+  color: white !important;
+}
+
+.next-button {
+  width: 100%;
+  height: 3rem;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
 }
