--- a/src/app/components/welcome-quizz/welcome-quizz.component.html
+++ b/src/app/components/welcome-quizz/welcome-quizz.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-28 flex align-content-center justify-center">
+<div class="container-fluid mt-28 flex align-content-center justify-center mb-20">
     <div
         class="bg-white p-8 border rounded-3xl border-slate-300 shadow-lg shadow-gray-500/50 sm:w-full mx-5 lg:w-5/6"
     >
@@ -6,8 +6,8 @@
             Bienvenue dans l'application de quiz TripMemories
         </h1>
         <p class="text-left text-lg">
-            Ce quiz sur {{ poiName }} qui contiendra un total de {{ nbrQuestions }} questions.
-            Chaque question vaut 10 points
+            Ce quiz sur {{ poiName }} contiendra un total de {{ nbrQuestions }} questions. Chaque
+            question vaut 10 points
         </p>
         <h4 class="text-2xl font-bold mt-5">Règles :</h4>
         <ol class="list-decimal ml-5 text-lg">
@@ -17,7 +17,7 @@
             <li>Rafraîchir la page réinitialisera le quiz</li>
         </ol>
         <h1 class="text-center font-semibold text-4xl mt-10 mb-10">
-            Bonne chance à toi {{ name.split(' ')[0] }}!
+            Bonne chance à toi {{ name.split(' ')[0] }} !
         </h1>
 
         <div class="flex justify-center">
