--- a/src/app/pages/quizz-page/quizz-page.component.html
+++ b/src/app/pages/quizz-page/quizz-page.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!quizzStarted">
+<div *ngIf="!quizStarted && !endQuiz">
     <app-welcome-quizz
         [name]="name"
         (startQuiz)="startQuiz()"
@@ -6,7 +6,7 @@
         [poiName]="'Arc de triomphe'"
     ></app-welcome-quizz>
 </div>
-<div class="mt-28" *ngIf="quizzStarted">
+<div class="mt-28" *ngIf="quizStarted && !endQuiz">
     <app-question
         [questionModel]="question"
         [totalQuestions]="nbrQuestions"
@@ -14,4 +14,13 @@
         [score]="score"
         (nextQuestion)="nextQuestion($event)"
     ></app-question>
+</div>
+<div *ngIf="endQuiz">
+    <app-end-quiz
+        [name]="name"
+        [score]="score"
+        [nbrQuestions]="nbrQuestions"
+        [answers]="summary"
+        [poiName]="'Arc de triomphe'"
+    ></app-end-quiz>
 </div>
