--- a/src/app/components/profil-info/profil-info.component.html
+++ b/src/app/components/profil-info/profil-info.component.html
@@ -7,5 +7,6 @@
         [user]="user"
         [nbrFriends]="nbrFriends"
         [nbrMonuments]="nbrMonuments"
+        [nbrPoints]="nbrPoints"
     ></app-my-informations>
 </div>
