--- a/src/app/pages/profil-page/profil-page.component.html
+++ b/src/app/pages/profil-page/profil-page.component.html
@@ -17,6 +17,7 @@
                 [profilPic]="profilPic"
                 [nbrFriends]="nbrFriends"
                 [nbrMonuments]="nbrMonuments"
+                [nbrPoints]="nbrPoints"
                 [user]="user"
             ></app-profil-info>
         </div>
