--- a/src/app/pages/poi-page/poi-page.component.html
+++ b/src/app/pages/poi-page/poi-page.component.html
@@ -44,6 +44,7 @@
                         (click)="openDialog()"
                     ></button>
                     <button
+                        *ngIf="nbrQuestions > 0"
                         pButton
                         class="p-button-rounded p-button-primary p-button-outlined"
                         label="Démarrer un quiz sur ce lieu"
@@ -176,6 +177,7 @@
     <ng-template pTemplate="content">
         <div class="flex flex-col justify-center gap-6">
             <button
+                *ngIf="nbrQuestions >= 5"
                 pButton
                 class="p-button-rounded p-button-primary p-button-outlined"
                 label="Facile"
@@ -183,12 +185,14 @@
             ></button>
             <button
                 pButton
+                *ngIf="nbrQuestions > 10"
                 class="p-button-rounded p-button-primary p-button-outlined"
                 label="Moyen"
                 (click)="goToQuiz('medium')"
             ></button>
             <button
                 pButton
+                *ngIf="nbrQuestions > 20"
                 class="p-button-rounded p-button-primary p-button-outlined"
                 label="Difficile"
                 (click)="goToQuiz('hard')"
