--- a/src/app/components/buy-ticket-poi-card/buy-ticket-poi-card.component.html
+++ b/src/app/components/buy-ticket-poi-card/buy-ticket-poi-card.component.html
@@ -18,7 +18,12 @@
         class="absolute flex justify-center items-center cursor-pointer z-20 top-1/3 left-1/2"
         (click)="addTicketToBasket()"
     >
-        <button pButton class="w-full h-2/6" label="Acheter un billet"></button>
+        <button
+            *ngIf="authServices.user?.access_token"
+            pButton
+            class="w-full h-2/6"
+            label="Acheter un billet"
+        ></button>
     </div>
     <img
         [ngSrc]="
