--- a/src/app/components/end-quiz/end-quiz.component.html
+++ b/src/app/components/end-quiz/end-quiz.component.html
@@ -3,7 +3,7 @@
         class="bg-white p-8 border rounded-3xl border-slate-300 shadow-lg shadow-gray-500/50 sm:w-full mx-5 lg:w-5/6"
     >
         <h1 class="text-4xl font-extrabold text-left">
-            Félicitations {{ name.split(' ')[0] }}! Tu as terminé le quiz
+            Félicitations {{ name && name.split(' ')[0] }}! Tu as terminé le quiz
         </h1>
         <p class="text-left text-lg">
             Ce quiz sur {{ poiName }} t'a permis de répondre à un total de
