--- a/src/app/components/my-ticket-card/my-ticket-card.component.html
+++ b/src/app/components/my-ticket-card/my-ticket-card.component.html
@@ -20,7 +20,12 @@
         </ng-template>
         <div class="flex flex-col gap-2">
             <div class="flex flex-row justify-between text-sm">
-                <p>A été utilisé: {{ ticket?.usedAt ?? 'Non' }}</p>
+                <p>
+                    A été utilisé:
+                    <span [class]="ticket && ticket.usedAt ? 'text-red-500' : 'text-green-500'">{{
+                        ticket && ticket.usedAt ? 'Oui' : 'Non'
+                    }}</span>
+                </p>
                 <div class="flex flex-row items-center gap-2 font-bold">
                     <p>Acheté le: {{ dateParsed[0] }} à {{ dateParsed[1] }}</p>
                 </div>
