--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -10,19 +10,20 @@
             </p>
             <div class="comment-footer">
                 <span class="comment-date">{{ date | timeAgo }}</span>
-                <span class="comment-likes">{{ nbrLikes }} likes</span>
-                <span *ngIf="isMyPost" (click)="deleteComment()" class="deletePost"
+                <span class="comment-likes"
+                    >{{ nbrLikes }} like{{ nbrLikes && nbrLikes > 1 ? 's' : '' }}</span
+                >
+                <span *ngIf="isMyComment" (click)="deleteComment()" class="deletePost"
                     >Supprimer mon commentaire</span
                 >
+                <i
+                    *ngIf="!isMyComment"
+                    class="cursor-pointer pi pi-heart{{ isLiked ? '-fill' : '' }}"
+                    (click)="isLiked ? dislike() : like()"
+                    style="font-size: 1rem"
+                ></i>
                 <!--<p-button icon="pi pi-reply" label="Reply" class="p-button-text"></p-button>-->
             </div>
         </div>
-        <i
-            class="absolute cursor-pointer right-1 top-1/2 -translate-y-1/2 pi pi-heart{{
-                isLiked ? '-fill' : ''
-            }}"
-            (click)="isLiked ? dislike() : like()"
-            style="font-size: 1rem"
-        ></i>
     </div>
 </p-panel>
