--- a/src/app/container/comments/comments-section/comments-section.component.html
+++ b/src/app/container/comments/comments-section/comments-section.component.html
@@ -10,7 +10,7 @@
 >
     <ng-template pTemplate="content">
         <div class="flex flex-row gap-4 h-full">
-            <div class="flex-1 relative">
+            <div class="flex-[60] relative">
                 <img
                     [ngSrc]="
                         postUrl ??
@@ -18,10 +18,11 @@
                     "
                     alt="placeholder"
                     class="absolute object-cover"
+                    priority
                     fill
                 />
             </div>
-            <div class="flex flex-col">
+            <div class="flex-[40] flex flex-col">
                 <div class="flex-[80] flex flex-col gap-4 overflow-x-auto">
                     <app-comment
                         *ngFor="let comment of comments"
@@ -31,15 +32,15 @@
                         [nbrLikes]="comment.likesCount"
                         [isLiked]="comment.isLiked"
                         [commentId]="comment.id"
-                        [isMyPost]="comment.createdById === IdAuthor"
-                        (emitter)="getComments()"
+                        [isMyComment]="comment.createdById === IdAuthor"
+                        (emitter)="getComments($event)"
                         class="mb-3"
                     ></app-comment>
                 </div>
                 <div class="flex-[20]">
                     <app-comment-form
                         [postId]="postId"
-                        (emitter)="getComments()"
+                        (emitter)="getComments($event)"
                     ></app-comment-form>
                 </div>
             </div>
