--- a/src/app/components/my-ticket-card/my-ticket-card.component.html
+++ b/src/app/components/my-ticket-card/my-ticket-card.component.html
@@ -20,7 +20,12 @@
         </ng-template>
         <div class="flex flex-col gap-2">
             <div class="flex flex-row justify-between text-sm">
-                <p>A été utilisé: {{ ticket?.usedAt ?? 'Non' }}</p>
+                <p>
+                    A été utilisé:
+                    <span [class]="ticket && ticket.usedAt ? 'text-red-500' : 'text-green-500'">{{
+                        ticket && ticket.usedAt ? 'Oui' : 'Non'
+                    }}</span>
+                </p>
                 <div class="flex flex-row items-center gap-2 font-bold">
                     <p>Acheté le: {{ dateParsed[0] }} à {{ dateParsed[1] }}</p>
                 </div>
@@ -29,7 +34,9 @@
                 Nombre de personne pour le billet: {{ ticket?.ticket?.groupSize }}
             </h4>
             <h2 class="p-mt-2 text-xl font-bold">{{ ticket?.ticket?.title }}</h2>
-            <h3 class="text-sm">Monument: {{ ticket?.ticket?.poi?.name }}</h3>
+            <h3 class="text-sm">
+                <span class="font-semibold">Monument:</span> {{ ticket?.ticket?.poi?.name }}
+            </h3>
             <h3 class="text-sm">{{ ticket?.ticket?.description }}</h3>
             <div class="flex flex-row justify-between">
                 <span
